pxc/tests/test_11_foreach/fe_arr3.px

import io;

vector{string} a.resize(100);
int t = 0;
foreach (ulong i, long s : a) { // error
  t += s;
}

